[project]
name = "infinity-sdk"
version = "0.6.5"
requires-python = ">=3.10"
dependencies = [
    "sqlglot[rs]>=27.10.0",
    "pydantic>=2.9.0,<3.0.0",
    "thrift>=0.20.0,<1.0.0",
    "setuptools>=75.2.0,<76.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "polars-lts-cpu>=1.9.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",
    "readerwriterlock>=1.0.0,<2.0.0"
]
description = "infinity"
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "L0",
    "L1",
    "L2",
    "L3",
    "complex",
    "slow",
    "nightly",
]

filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::ResourceWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # "ignore::thrift.transport.TTransport",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]